--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <!-- Title for the map-->
     <div id="title" class="title">
-        <h2>A visual analysis of public green spaces and incidents of crime</h2>
+        <h2>A visual analysis of public green spaces and crime incidents in Seattle </h2>
     </div>
 
     <!-- Mapbox and additional libraries -->
