--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
 
         }
 
+        #sources {
+            position: absolute;
+            bottom: 2%;
+            right: 1%;
+            font-size: 10px;
+            color: #f1f1f1f0;
+        }
+
         #feature-info {
             margin-bottom: 20px;
         }
@@ -105,6 +113,11 @@
         <label>
             <input type="checkbox" id="heatmapToggle"> Toggle Heatmap
         </label>
+    </div>
+
+    <div id="sources">
+        <h2> Data source: City of Seattle</h2>
+
     </div>
 
     <!-- Sidebar for selected feature information -->
@@ -318,5 +331,6 @@
 </body>
 
 </html>
+
 
 
